fix: not all 25 stars visible in leaderboard

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -184,7 +184,7 @@ animation-delay: 0.5s;
 }
 
 .star {
-font-size: 1.3vh;
+font-size: 1.5vw;
 color: #333333;
 --star-color: #111111;
 }
